Deprecate Base64 and switch to DatatypeConverter
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1459031 13f79535-47bb-0310-9956-ffa450edef68